removed DB and hardcoded data